--- a/views/JaeRyo.html
+++ b/views/JaeRyo.html
@@ -20,11 +20,61 @@
 </head>
   
   <body>
-    <h1>재료를 입력해주세요</h1>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">FOODRUCE 101</a>
+      <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        Menu
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/jaeryo">내 레시피로 추천받기</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/theme">레시피 열람하기</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+    <!--<h1>재료를 입력해주세요</h1>-->
     <form action="/chuchun" method="POST">
-        <h3>재료1</h3> : <input type="text" name="inp1"><br>
-        <h3>재료2</h3> : <input type="text" name="inp2"><br>
-        <input type="submit">
+        <!--<h3>재료1</h3> : <input type="text" name="inp1"><br>-->
+        <!--<h3>재료2</h3> : <input type="text" name="inp2"><br>-->
+      <!--<button></button>-->
+      <!--<input type="submit">-->
+    <!--</form>-->
+    <!--<form name="sentMessage" id="contactForm" novalidate="novalidate">-->
+      <div style = "height : 120"></div>
+      <div class="control-group" style = "text-align: center">
+        <img class="masthead-avatar" src="img/avataaars.svg" alt="" style = "height : 300">
+
+      </div>
+      <div class="control-group">
+        <div class="form-group floating-label-form-group controls mb-0 pb-2">
+          <label>Email Address</label>
+          <input class="form-control" id="email" placeholder="첫번째 재료를 입력해주세요"  style = "text-align: center">
+          <!--<input class="form-control" id="email" type="email" placeholder="첫번째 재료를 입력해주세요" required="required" data-validation-required-message="Please enter your email address." style = "text-align: center">-->
+          <p class="help-block text-danger"></p>
+        </div>
+      </div>
+      <div class="control-group">
+        <div class="form-group floating-label-form-group controls mb-0 pb-2">
+          <label>Phone Number</label>
+          <input class="form-control" id="phone" type="tel" placeholder="두번째 재료를 입력해주세요" required="required" data-validation-required-message="Please enter your phone number."style = "text-align: center">
+          <p class="help-block text-danger"></p>
+        </div>
+      </div>
+      <br>
+
+      <div id="success"></div>
+      <div class="form-group"style = "text-align: center">
+        <button type="submit" class="btn btn-primary btn-xl" id="sendMessageButton" >레시피 추천받기</button>
+      </div>
     </form>
   </body>
 </html>
