--- a/views/Theme.html
+++ b/views/Theme.html
@@ -43,7 +43,7 @@
       <div class="divider-custom">
         <div class="divider-custom-line"></div>
         <div class="divider-custom-icon">
-          <i class="fas fa-star"></i>
+          <i class="fas fa-book"></i>
         </div>
         <div class="divider-custom-line"></div>
       </div>
@@ -54,37 +54,37 @@
 
         <!-- Portfolio Item 1 -->
       
-          <a class="portfolio-item mx-auto" href="./recipe?theme=american" >
+          <a class="portfolio-item mx-auto h-100 w-100" href="./recipe?theme=american" >
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x">American</i>
               </div>
             </div>
-            <img class="img-fluid" src="https://images.unsplash.com/photo-1544068192-4c4af19868c6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80">
+            <img class="img-fluid" src="img/food/american/70c03f4555eaf6da08fcd9af5f0fe481.jpg">
           </a>
-          <a class="portfolio-item mx-auto" href="./recipe?theme=korean">
+          <a class="portfolio-item mx-auto h-100 w-100" href="./recipe?theme=korean">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x">Korean</i>
               </div>
             </div>
-            <img class="img-fluid" src="https://images.unsplash.com/photo-1550388341-d3d5ac2a724e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=919&q=80">
+            <img class="img-fluid" src="img/food/korean/2016110214348066513_1.jpg">
           </a>
-          <a class="portfolio-item mx-auto" href="./recipe?theme=european">
+          <a class="portfolio-item mx-auto h-100 w-100" href="./recipe?theme=european">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x">European</i>
               </div>
             </div>
-            <img class="img-fluid" src="https://images.unsplash.com/photo-1558199141-391d935676f0?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=701&q=80">
+            <img class="img-fluid" src="img/food/uro/2.jpg">
           </a>
-          <a class="portfolio-item mx-auto" href="./recipe?theme=mexican">
+          <a class="portfolio-item mx-auto h-100 w-100" href="./recipe?theme=mexican">
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white">
                 <i class="fas fa-plus fa-3x">Mexican</i>
               </div>
             </div>
-            <img class="img-fluid" src="https://images.unsplash.com/photo-1558211254-c9761a9bfc8c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80">
+            <img class="img-fluid" src="img/food/mexico/9.jpg">
           </a>
         <!-- Portfolio Item 2 -->
         
