--- a/views/Recipe.ejs
+++ b/views/Recipe.ejs
@@ -92,6 +92,7 @@
                           <% for(const i of a.ingredients) { %>
                             <p ><%= i %></p>
                           <% } %>
+                          <%= a.recipeData %><p></p>
                           <button class="btn btn-primary" href="#" data-dismiss="modal">
                             <i class="fas fa-times fa-fw"></i>
                             Close Window
