--- a/views/Recipe.ejs
+++ b/views/Recipe.ejs
@@ -1,149 +1,188 @@
 <!DOCTYPE html>
 <html lang="en">
-​
-<head>
-​
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
-​
-  <title>Freelancer - Start Bootstrap Theme</title>
-​
-  <!-- Custom fonts for this theme -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
-​
-  <!-- Theme CSS -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
-​
-​
-​
-​
-​
-</head>
-​
-<body id="page-top">
-​
-  <!-- Navigation -->
-​
-​
-  <!-- Masthead -->
-​
-​
-  <!-- Portfolio Section -->
-  <section class="page-section portfolio" id="portfolio">
-    <div class="container">
-      
-      <!-- Portfolio Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0"><%= theme %><br><br>  추천 레시피들</h2> 
-​
-      <!-- Icon Divider -->
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-book"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-​
-      <!-- Portfolio Grid Items -->
-      <div class="row">
-​
-        <!-- Portfolio Item 1 -->
-      
-        
-        <% let i = 1; %>
-        <% for(const a of list) { %>
-          <div class="portfolio-item mx-auto h-100 w-100" data-toggle="modal" data-target="#portfolioModal<%= i %>">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x"></i>
-              </div>
-            </div>
-            <img class="img-fluid" src=<%= a.url %>>
-          </div>
-          <div class="portfolio-modal modal fade" id="portfolioModal<%= i++ %>" tabindex="-1" role="dialog" aria-labelledby="portfolioModal1Label" aria-hidden="true">
-              <div class="modal-dialog modal-xl" role="document">
-                <div class="modal-content">
-                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">
-                      <i class="fas fa-times"></i>
-                    </span>
-                  </button>
-                  <div class="modal-body text-center">
-                    <div class="container">
-                      <div class="row justify-content-center">
-                        <div class="col-lg-8">
-                          <!-- Portfolio Modal - Title -->
-                          <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0"><%=a.menu%></h2>
-                          <!-- Icon Divider -->
-                          <div class="divider-custom">
-                            <div class="divider-custom-line"></div>
-                            <div class="divider-custom-icon">
-                              <i class="fas fa-star"></i>
-                            </div>
-                            <div class="divider-custom-line"></div>
-                          </div>
-                          <!-- Portfolio Modal - Image -->
-                          <img class="img-fluid rounded mb-5" src=<%=a.url%> alt="">
-                          <!-- Portfolio Modal - Text -->
-                          <% for(const i of a.ingredients) { %>
-                            <p ><%= i %></p>
-                          <% } %>
-                          <%= a.recipeData %><p></p>
-                          <button class="btn btn-primary" href="#" data-dismiss="modal">
-                            <i class="fas fa-times fa-fw"></i>
-                            Close Window
-                          </button>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          
-        <% } %>
-      
-        <!-- Portfolio Item 2 -->
-        
-​
-        <!-- Portfolio Item 3 -->
-        
-​
-        <!-- Portfolio Item 4 -->
-        
-​
-        <!-- Portfolio Item 5 -->
-        
-​
-        <!-- Portfolio Item 6 -->
-        
-​
-      </div>
-      <!-- /.row -->
-​
-    </div>
-  </section>
-​
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-​
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-​
-  <!-- Contact Form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
-​
-  <!-- Custom scripts for this template -->
-  <script src="js/freelancer.min.js"></script>
-​
-</body>
-​
+	​
+	<head>
+		​
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<meta name="description" content="" />
+		<meta name="author" content="" />
+		​
+		<title>Freelancer - Start Bootstrap Theme</title>
+		​
+		<!-- Custom fonts for this theme -->
+		<link
+			href="vendor/fontawesome-free/css/all.min.css"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		​
+		<!-- Theme CSS -->
+		<link href="css/freelancer.min.css" rel="stylesheet" />
+		​ ​ ​ ​ ​
+	</head>
+	​
+	<body id="page-top">
+		​
+		<!-- Navigation -->
+		​ ​
+		<!-- Masthead -->
+		​ ​
+		<!-- Portfolio Section -->
+		<section class="page-section portfolio" id="portfolio">
+			<div class="container">
+				<!-- Portfolio Section Heading -->
+				<h2
+					class="page-section-heading text-center text-uppercase text-secondary mb-0"
+				>
+					<%= theme %><br /><br />
+					추천 레시피들
+				</h2>
+				​
+				<!-- Icon Divider -->
+				<div class="divider-custom">
+					<div class="divider-custom-line"></div>
+					<div class="divider-custom-icon">
+						<i class="fas fa-book"></i>
+					</div>
+					<div class="divider-custom-line"></div>
+				</div>
+				​
+				<!-- Portfolio Grid Items -->
+				<div class="row">
+					​
+					<!-- Portfolio Item 1 -->
+
+					<% let i = 1; %> <% for(const a of list) { %>
+					<div
+						class="portfolio-item mx-auto h-100 w-100"
+						data-toggle="modal"
+						data-target="#portfolioModal<%= i %>"
+					>
+						<div
+							class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
+						>
+							<div
+								class="portfolio-item-caption-content text-center text-white"
+							>
+								<i class="fas fa-plus fa-3x"></i>
+							</div>
+						</div>
+						<img class="img-fluid" src=<%= a.url %>>
+					</div>
+					<div
+						class="portfolio-modal modal fade"
+						id="portfolioModal<%= i++ %>"
+						tabindex="-1"
+						role="dialog"
+						aria-labelledby="portfolioModal1Label"
+						aria-hidden="true"
+					>
+						<div class="modal-dialog modal-xl" role="document">
+							<div class="modal-content">
+								<button
+									type="button"
+									class="close"
+									data-dismiss="modal"
+									aria-label="Close"
+								>
+									<span aria-hidden="true">
+										<i class="fas fa-times"></i>
+									</span>
+								</button>
+								<div class="modal-body text-center">
+									<div class="container">
+										<div class="row justify-content-center">
+											<div class="col-lg-8">
+												<!-- Portfolio Modal - Title -->
+												<h2
+													class="portfolio-modal-title text-secondary text-uppercase mb-0"
+												>
+													<%=a.menu%>
+												</h2>
+												<!-- Icon Divider -->
+												<div class="divider-custom">
+													<div class="divider-custom-line"></div>
+													<div class="divider-custom-icon">
+														<i class="fas fa-star"></i>
+													</div>
+													<div class="divider-custom-line"></div>
+												</div>
+												<!-- Portfolio Modal - Image -->
+												<img class="img-fluid rounded mb-5" src=<%=a.url%>
+												alt="">
+												<!-- Portfolio Modal - Text -->
+												<% for(const i of a.ingredients) { %>
+												<p><%= i %></p>
+												<% } %> <%= a.recipeData %>
+												<p></p>
+												<button
+													class="btn btn-primary"
+													href="#"
+													data-dismiss="modal"
+												>
+													<i class="fas fa-times fa-fw"></i>
+													Close Window
+												</button>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<% } %>
+
+					<!-- Portfolio Item 2 -->
+
+					​
+					<!-- Portfolio Item 3 -->
+
+					​
+					<!-- Portfolio Item 4 -->
+
+					​
+					<!-- Portfolio Item 5 -->
+
+					​
+					<!-- Portfolio Item 6 -->
+
+					​
+				</div>
+				<!-- /.row -->
+				​
+			</div>
+		</section>
+		​
+		<!-- Bootstrap core JavaScript -->
+		<script src="vendor/jquery/jquery.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		​
+		<!-- Plugin JavaScript -->
+		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+		​
+		<!-- Contact Form JavaScript -->
+		<script src="js/jqBootstrapValidation.js"></script>
+		<script src="js/contact_me.js"></script>
+		​
+		<!-- Custom scripts for this template -->
+		<script src="js/freelancer.min.js"></script>
+		​
+	</body>
+	​
 </html>
 ​
-
