--- a/views/Theme.html
+++ b/views/Theme.html
@@ -1,130 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1, shrink-to-fit=no"
+		/>
+		<meta name="description" content="" />
+		<meta name="author" content="" />
 
-<head>
+		<title>Freelancer - Start Bootstrap Theme</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+		<!-- Custom fonts for this theme -->
+		<link
+			href="vendor/fontawesome-free/css/all.min.css"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Montserrat:400,700"
+			rel="stylesheet"
+			type="text/css"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic"
+			rel="stylesheet"
+			type="text/css"
+		/>
 
-  <title>Freelancer - Start Bootstrap Theme</title>
+		<!-- Theme CSS -->
+		<link href="css/freelancer.min.css" rel="stylesheet" />
+	</head>
 
-  <!-- Custom fonts for this theme -->
-  <link href="vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+	<body id="page-top">
+		<!-- Navigation -->
 
-  <!-- Theme CSS -->
-  <link href="css/freelancer.min.css" rel="stylesheet">
+		<!-- Masthead -->
 
+		<!-- Portfolio Section -->
+		<section class="page-section portfolio" id="portfolio">
+			<div class="container">
+				<!-- Portfolio Section Heading -->
+				<h2
+					class="page-section-heading text-center text-uppercase text-secondary mb-0"
+				>
+					테마별 음식 레시피
+				</h2>
 
+				<!-- Icon Divider -->
+				<div class="divider-custom">
+					<div class="divider-custom-line"></div>
+					<div class="divider-custom-icon">
+						<i class="fas fa-book"></i>
+					</div>
+					<div class="divider-custom-line"></div>
+				</div>
 
+				<form action="/chuchun" method="POST">
+					<!-- Portfolio Grid Items -->
+					<div class="row">
+						<!-- Portfolio Item 1 -->
 
+						<a
+							class="portfolio-item mx-auto h-100 w-100"
+							href="./recipe?theme=american"
+						>
+							<div
+								class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
+							>
+								<div
+									class="portfolio-item-caption-content text-center text-white"
+								>
+									<i class="fas fa-plus fa-3x">American</i>
+								</div>
+							</div>
+							<img
+								class="img-fluid"
+								src="img/food/american/70c03f4555eaf6da08fcd9af5f0fe481.jpg"
+							/>
+						</a>
+						<a
+							class="portfolio-item mx-auto h-100 w-100"
+							href="./recipe?theme=korean"
+						>
+							<div
+								class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
+							>
+								<div
+									class="portfolio-item-caption-content text-center text-white"
+								>
+									<i class="fas fa-plus fa-3x">Korean</i>
+								</div>
+							</div>
+							<img
+								class="img-fluid"
+								src="img/food/korean/2016110214348066513_1.jpg"
+							/>
+						</a>
+						<a
+							class="portfolio-item mx-auto h-100 w-100"
+							href="./recipe?theme=european"
+						>
+							<div
+								class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
+							>
+								<div
+									class="portfolio-item-caption-content text-center text-white"
+								>
+									<i class="fas fa-plus fa-3x">European</i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/food/uro/2.jpg" />
+						</a>
+						<a
+							class="portfolio-item mx-auto h-100 w-100"
+							href="./recipe?theme=mexican"
+						>
+							<div
+								class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100"
+							>
+								<div
+									class="portfolio-item-caption-content text-center text-white"
+								>
+									<i class="fas fa-plus fa-3x">Mexican</i>
+								</div>
+							</div>
+							<img class="img-fluid" src="img/food/mexico/9.jpg" />
+						</a>
+						<!-- Portfolio Item 2 -->
 
-</head>
+						<!-- Portfolio Item 3 -->
 
-<body id="page-top">
+						<!-- Portfolio Item 4 -->
 
-  <!-- Navigation -->
+						<!-- Portfolio Item 5 -->
 
+						<!-- Portfolio Item 6 -->
+					</div>
+					<input class="input" type="submit" style="display:none;" />
+				</form>
+				<!-- /.row -->
+			</div>
+		</section>
+		<!-- Bootstrap core JavaScript -->
+		<script src="vendor/jquery/jquery.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-  <!-- Masthead -->
+		<!-- Plugin JavaScript -->
+		<script src="vendor/jquery-easing/jquery.easing.min.js"></script>
 
+		<!-- Contact Form JavaScript -->
+		<script src="js/jqBootstrapValidation.js"></script>
+		<script src="js/contact_me.js"></script>
 
-  <!-- Portfolio Section -->
-  <section class="page-section portfolio" id="portfolio">
-    <div class="container">
-      
-      <!-- Portfolio Section Heading -->
-      <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">테마별 음식 레시피</h2>
-
-      <!-- Icon Divider -->
-      <div class="divider-custom">
-        <div class="divider-custom-line"></div>
-        <div class="divider-custom-icon">
-          <i class="fas fa-book"></i>
-        </div>
-        <div class="divider-custom-line"></div>
-      </div>
-
-      <form action="/chuchun" method="POST">
-      <!-- Portfolio Grid Items -->
-      <div class="row">
-
-        <!-- Portfolio Item 1 -->
-      
-          <a class="portfolio-item mx-auto h-100 w-100" href="./recipe?theme=american" >
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x">American</i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/food/american/70c03f4555eaf6da08fcd9af5f0fe481.jpg">
-          </a>
-          <a class="portfolio-item mx-auto h-100 w-100" href="./recipe?theme=korean">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x">Korean</i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/food/korean/2016110214348066513_1.jpg">
-          </a>
-          <a class="portfolio-item mx-auto h-100 w-100" href="./recipe?theme=european">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x">European</i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/food/uro/2.jpg">
-          </a>
-          <a class="portfolio-item mx-auto h-100 w-100" href="./recipe?theme=mexican">
-            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
-              <div class="portfolio-item-caption-content text-center text-white">
-                <i class="fas fa-plus fa-3x">Mexican</i>
-              </div>
-            </div>
-            <img class="img-fluid" src="img/food/mexico/9.jpg">
-          </a>
-        <!-- Portfolio Item 2 -->
-        
-
-        <!-- Portfolio Item 3 -->
-        
-
-        <!-- Portfolio Item 4 -->
-        
-
-        <!-- Portfolio Item 5 -->
-        
-
-        <!-- Portfolio Item 6 -->
-        
-
-      </div>
-      <input class="input" type="submit" style="display:none;">
-    </form>
-      <!-- /.row -->
-
-    </div>
-  </section>
-  <!-- Bootstrap core JavaScript -->
-  <script src="vendor/jquery/jquery.min.js"></script>
-  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-  <!-- Plugin JavaScript -->
-  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-
-  <!-- Contact Form JavaScript -->
-  <script src="js/jqBootstrapValidation.js"></script>
-  <script src="js/contact_me.js"></script>
-
-  <!-- Custom scripts for this template -->
-  <script src="js/freelancer.min.js"></script>
-
-
-</body>
-
+		<!-- Custom scripts for this template -->
+		<script src="js/freelancer.min.js"></script>
+	</body>
 </html>
-
-
