--- a/views/Recipe.ejs
+++ b/views/Recipe.ejs
@@ -27,7 +27,25 @@
 <body id="page-top">
 ​
   <!-- Navigation -->
-​
+​<nav class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top" id="mainNav">
+  <div class="container">
+    <a class="navbar-brand js-scroll-trigger" href="/">FOODRUCE 101</a>
+    <!-- <button class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+      Menu
+      <i class="fas fa-bars"></i>
+    </button> -->
+    <div class="collapse navbar-collapse" id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item mx-0 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/jaeryo">내 레시피로 추천받기</a>
+        </li>
+        <li class="nav-item mx-0 mx-lg-1">
+          <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="/theme">레시피 열람하기</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  </nav>
 ​
   <!-- Masthead -->
 ​
