--- a/views/Recipe.ejs
+++ b/views/Recipe.ejs
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 	<head>
-		​
 		<meta charset="utf-8" />
 		<meta
 			name="viewport"
@@ -179,4 +178,3 @@
 		<script src="js/freelancer.min.js"></script>
 	</body>
 </html>
-​
