--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,7 @@
 		<meta name="description" content="" />
 		<meta name="author" content="" />
 		​
-		<title>FOODRUCE 101 - 5분만에 추천받는 간단 레시피</title>
+		<title>FOODRUCE 101</title>
 		​
 		<!-- Custom fonts for this theme -->
 		<link
