--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -9,7 +9,7 @@
 		<meta name="description" content="" />
 		<meta name="author" content="" />
 
-		<title>Freelancer - Start Bootstrap Theme</title>
+		<title>FOODRUCE 101</title>
 
 		<!-- Custom fonts for this theme -->
 		<link
@@ -34,7 +34,7 @@
 
 	<body id="page-top">
 		<!-- Navigation -->
-
+		<% include ./components/header %>​ 
 		<!-- Masthead -->
 
 		<!-- Portfolio Section -->
