--- a/views/Recipe.ejs
+++ b/views/Recipe.ejs
@@ -10,7 +10,7 @@
 		<meta name="description" content="" />
 		<meta name="author" content="" />
 		​
-		<title>Freelancer - Start Bootstrap Theme</title>
+		<title>FOODRUCE 101</title>
 		​
 		<!-- Custom fonts for this theme -->
 		<link
