--- a/views/jaeryo.ejs
+++ b/views/jaeryo.ejs
@@ -8,7 +8,7 @@
 		<meta name="description" content="" />
 		<meta name="author" content="" />
 
-		<title>FOODRUCE 101 - 5분만에 추천받는 간단 레시피</title>
+		<title>FOODRUCE 101</title>
 
 		<!-- Custom fonts for this theme -->
 		<link
@@ -78,47 +78,7 @@
 		</script>
 
 		<!-- Navigation -->
-		<nav
-			class="navbar navbar-expand-lg bg-secondary text-uppercase fixed-top"
-			id="mainNav"
-		>
-			<div class="container">
-				<a class="navbar-brand js-scroll-trigger" href="#page-top"
-					>FOODRUCE 101</a
-				>
-				<button
-					class="navbar-toggler navbar-toggler-right text-uppercase font-weight-bold bg-primary text-white rounded"
-					type="button"
-					data-toggle="collapse"
-					data-target="#navbarResponsive"
-					aria-controls="navbarResponsive"
-					aria-expanded="false"
-					aria-label="Toggle navigation"
-				>
-					Menu
-					<i class="fas fa-bars"></i>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item mx-0 mx-lg-1">
-							<a
-								class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-								href="/jaeryo"
-								>내 레시피로 추천받기</a
-							>
-						</li>
-						<li class="nav-item mx-0 mx-lg-1">
-							<a
-								class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger"
-								href="/theme"
-								>레시피 열람하기</a
-							>
-						</li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-
+		<% include ./components/header %>​ 
 		<!--<h1>재료를 입력해주세요</h1>-->
 		<form action="/chuchun" method="POST" autocomplete="off">
 			<!--<h3>재료1</h3> : <input type="text" name="inp1"><br>-->
@@ -142,7 +102,7 @@
 					<input
 						class="mdb-autocomplete form-control"
 						id="foodIngredients1"
-						placeholder="첫번째 재료를 입력해주세"
+						placeholder="첫번째 재료를 입력해주세요"
 						style="text-align: center"
 					/>
 					<!--<input class="form-control" id="email" type="email" placeholder="첫번째 재료를 입력해주세요" required="required" data-validation-required-message="Please enter your email address." style = "text-align: center">-->
