fix : 재료추천 버그 수정

--- a/views/jaeryo.ejs
+++ b/views/jaeryo.ejs
@@ -102,6 +102,7 @@
 					<input
 						class="mdb-autocomplete form-control"
 						id="foodIngredients1"
+						name='jeryo1'
 						placeholder="첫번째 재료를 입력해주세요"
 						style="text-align: center"
 					/>
@@ -115,6 +116,7 @@
 					<input
 						class="form-control"
 						id="foodIngredients2"
+						name='jeryo2'
 						type="tel"
 						placeholder="두번째 재료를 입력해주세요"
 						required="required"
