--- a/views/Recipe.ejs
+++ b/views/Recipe.ejs
@@ -162,7 +162,7 @@
 													<button
 														class="btn btn-primary"
 														style="float: right"
-														onclick="postComment()"
+														onclick="postComment(<%=i%>)"
 													>
 														<i class="fas fa-edit"></i>
 														댓글 작성
