--- a/views/recommend.ejs
+++ b/views/recommend.ejs
@@ -30,6 +30,14 @@
 
 		<!-- Theme CSS -->
 		<link href="css/freelancer.min.css" rel="stylesheet" />
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/comment.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/components/form.min.css"
+		/>
 	</head>
 
 	<body id="page-top">
@@ -155,10 +163,56 @@
 									<p class="mb-5">
 										<%= a.recipeData %>
 									</p>
-									<button class="btn btn-primary" href="#" data-dismiss="modal">
+
+									<div
+										class="ui small comments comments_box_<%=i%>"
+										style="text-align: left; margin-top: 50px;"
+									>
+										<h3 class="ui dividing header">Recipe Comments</h3>
+
+										<% replyObj[a.id] && replyObj[a.id].forEach(e => { %>
+										<div class="comment">
+											<div class="content">
+												<a class="avatar"> <img src="/img/user.png"/></a>
+												<a class="author">익명 사용자</a>
+												<div class="metadata">
+													<span class="date"><%= e.postedAt%></span>
+												</div>
+												<div class="text"><%= e.content%></div>
+											</div>
+										</div>
+										<% }) %>
+									</div>
+
+									<div class="ui reply form">
+										<div class="field">
+											<textarea
+												id="comment_form_<%=a.id%>"
+												style="height: 130px;"
+											></textarea>
+										</div>
+										<button
+											class="btn btn-primary"
+											style="float: right"
+											onclick="postComment(<%=a.id%>)"
+										>
+											<i class="fas fa-edit"></i>
+											댓글 작성
+										</button>
+										<button
+											class="btn btn-primary"
+											data-dismiss="modal"
+											style="float: left;"
+										>
+											<i class="fas fa-times fa-fw"></i>
+											닫기
+										</button>
+									</div>
+
+									<!-- <button class="btn btn-primary" href="#" data-dismiss="modal">
 										<i class="fas fa-times fa-fw"></i>
 										Close Window
-									</button>
+									</button> -->
 								</div>
 							</div>
 						</div>
@@ -178,6 +232,9 @@
 		<!-- Contact Form JavaScript -->
 		<script src="js/jqBootstrapValidation.js"></script>
 		<script src="js/contact_me.js"></script>
+
+		<!-- comments -->
+		<script src="js/comments.js"></script>
 
 		<!-- Custom scripts for this template -->
 		<script src="js/freelancer.min.js"></script>
